--- a/fichier1.css
+++ b/fichier1.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: yellow;
+  background-color: green;
   margin: 10px; 
   padding: 10px; 
 }
